docs/k8s/hello-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app.kubernetes.io/name: hello
spec:
  containers:
    - name: hello
      image: hashicorp/http-echo
      args:
        - "-text=hello"
