docs/k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app.kubernetes.io/name: hello
  ports:
    - name: hello-port
      protocol: TCP
      port: 3000 # Default port for image: kennship/http-echo
